# GuardianRS

./: .gitignore  Cargo.toml  readme.md
src/: database.rs  events.rs  handler.rs  lib.rs  main.rs  util.rs
src/commands/: command_util.rs  member_commands.rs  mod.rs  staff_commands.rs
src/events/: message_events.rs  mod.rs
