[package]
name = "guardian_rs"
version = "0.1.0"
authors = ["TSP_Panda <chris.barwick16@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
indoc = "0.3"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.8"